--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,8 @@ python:
 
 before_install:
   - if [ "$(expr substr $(uname -s) 1 5)" == "Linux" ] ; then sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test && sudo apt-get -qq update && sudo apt-get -qq install g++-4.8 gcc-4.8 && sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 90 && sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.8 90 ; fi
+
+before_install:
    - pwd
    - export LD_LIBRARY_PATH=$(pwd)/jayhorn/jayhorn/native_lib
 
