--- a/.travis.yml
+++ b/.travis.yml
@@ -25,11 +25,12 @@ python:
 before_install:
   - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
   - sudo apt-get -qq update
-  - sudo apt-get -qq install g++-4.8 gcc-4.8
+  - until sudo apt-get -qq install g++-4.8 gcc-4.8; done
   - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 90
   - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.8 90
+  - until sudo apt-get -qq install libstdc++-4.8-dev; do echo retry; done
   
-
+  
 before_install:
    - pwd
    - export LD_LIBRARY_PATH=$(pwd)/jayhorn/jayhorn/native_lib
