--- a/.travis.yml
+++ b/.travis.yml
@@ -58,7 +58,7 @@ install:
   - cd src
   - ls
   - make minisat2-download
-  - make CXXFLAGS="-Wall -O2 -g -Werror -Wno-deprecated-register -pedantic -Wno-sign-compare" -j2
+  - make CXX="g++-4.8" CXXFLAGS="-Wall -O2 -g -Werror -Wno-deprecated-register -pedantic -Wno-sign-compare" -j2
   - ./cbmc/cbmc -h
   - pwd
   - cd
