--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,7 @@ install:
 script:   
    - echo "    RUNNING JAYHORN ON Benchmarks   "
    - ls jayhorn/jayhorn/build/libs
-   - python runner.py algorithms loops termination MinePump/spec1-5 -html
+   - python runner.py algorithms loops termination MinePump/spec1-5 -html --timeout 10.0
    
 after_success:
    - ./deploy_results.sh
