new recursive bench

--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,7 @@ install:
 script:   
    - echo "    RUNNING JAYHORN ON Benchmarks   "
    - ls jayhorn/jayhorn/build/libs
-   - python runner.py algorithms loops termination -html --timeout 10.0
+   - python runner.py algorithms loops termination recursive -html --timeout 20.0
    - python runner.py MinePumpSingle/spec1 -html -mp --timeout 40.0
    
 after_success:
